--- a/Map/index.html
+++ b/Map/index.html
@@ -10,6 +10,8 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/gh/tomickigrzegorz/autocomplete@1.8.6/dist/js/autocomplete.min.js"></script>
   </head>
 
   <body>
