--- a/Map/index.html
+++ b/Map/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>image on map</title>
+    <title>Radijske frekvencec</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
@@ -11,10 +11,13 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"></script>
 
+    <script type="text/javascript" src="rf.json"></script>
+
     <script src="https://cdn.jsdelivr.net/gh/tomickigrzegorz/autocomplete@1.8.6/dist/js/autocomplete.min.js"></script>
   </head>
 
   <body>
+    <div class="marker-position">Regija</div>
     <div id="map"></div>
     <script src="script.js"></script>
   </body>
