--- a/Map/index.html
+++ b/Map/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Radijske frekvencec</title>
+    <title>MT4G5G</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
@@ -14,10 +14,16 @@
     <script type="text/javascript" src="rf.json"></script>
 
     <script src="https://cdn.jsdelivr.net/gh/tomickigrzegorz/autocomplete@1.8.6/dist/js/autocomplete.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.css"/>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.Default.css"/>
+
+    <script src="markercluster.js"></script>
   </head>
 
   <body>
-    <div class="marker-position">Regija</div>
+    <div class="marker-position">Click/hover on polygon</div>
     <div id="map"></div>
     <script src="script.js"></script>
   </body>
