Add/edit/remove tower and get LatLng

--- a/Map/index.html
+++ b/Map/index.html
@@ -19,6 +19,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.Default.css"/>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.0/leaflet.draw.css"/>
+
+    <script src="draw.js"></script>
     <script src="markercluster.js"></script>
   </head>
 
