--- a/Map/index.html
+++ b/Map/index.html
@@ -3,22 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Radijske frekvencec</title>
+    <title>Radijske frekvence</title>
+
+    <!-- Leaflet CSS -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
     />
+
+    <!-- Leaflet.draw CSS ✅ -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.css"
+    />
+
+    <!-- Your control panel CSS -->
+    <link rel="stylesheet" href="controls.css" />
+
+    <!-- MarkerCluster CSS -->
+    <link rel="stylesheet" href="leaflet.markercluster.css" />
+    <link rel="stylesheet" href="MarkerCluster.Default.css" />
+
+    <!-- Your main CSS -->
     <link rel="stylesheet" href="style.css" />
-    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"></script>
 
-    <script type="text/javascript" src="rf.json"></script>
 
-    <script src="https://cdn.jsdelivr.net/gh/tomickigrzegorz/autocomplete@1.8.6/dist/js/autocomplete.min.js"></script>
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.Default.css"/>
   </head>
 
   <body>
     <div class="marker-position">Regija</div>
     <div id="map"></div>
+
+    <!-- Leaflet JS -->
+    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"></script>
+
+    <!-- Leaflet.draw JS ✅ -->
+    <script src="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.js"></script>
+
+    <!-- MarkerCluster JS -->
+    <script src="markercluster.js"></script>
+
+    <!-- Autocomplete -->
+    <script src="https://cdn.jsdelivr.net/gh/tomickigrzegorz/autocomplete@1.8.6/dist/js/autocomplete.min.js"></script>
+
+    <!-- Your draw helper (teammate) -->
+    <script src="draw.js"></script>
+
+    <!-- Your main map code -->
     <script src="script.js"></script>
   </body>
 </html>
