--- a/Map/index.html
+++ b/Map/index.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Radijske frekvence</title>
 
-    <!-- Leaflet CSS -->
+    <!-- Leaflet CSS da mama leaflet-->
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
     />
 
-    <!-- Leaflet.draw CSS ✅ -->
+    <!-- Leaflet.draw CSS  -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.css"
     />
 
-    <!-- Your control panel CSS -->
+    <!-- Najin control panel CSS -->
     <link rel="stylesheet" href="controls.css" />
 
     <!-- MarkerCluster CSS -->
     <link rel="stylesheet" href="leaflet.markercluster.css" />
     <link rel="stylesheet" href="MarkerCluster.Default.css" />
 
-    <!-- Your main CSS -->
+    <!-- Glavni sytle CSS -->
     <link rel="stylesheet" href="style.css" />
 
 
@@ -40,7 +40,7 @@
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"></script>
 
-    <!-- Leaflet.draw JS ✅ -->
+    <!-- Leaflet.draw JS  -->
     <script src="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.js"></script>
 
     <!-- MarkerCluster JS -->
@@ -49,10 +49,10 @@
     <!-- Autocomplete -->
     <script src="https://cdn.jsdelivr.net/gh/tomickigrzegorz/autocomplete@1.8.6/dist/js/autocomplete.min.js"></script>
 
-    <!-- Your draw helper (teammate) -->
+    <!-- Drawer -->
     <script src="draw.js"></script>
 
-    <!-- Your main map code -->
+    <!-- Koda za mapo -->
     <script src="script.js"></script>
   </body>
 </html>
